Hopefully latest code

--- a/templates/default.tpl.html
+++ b/templates/default.tpl.html
@@ -45,9 +45,9 @@
         </div>
 	<div class="column">
 	  <ul>
-	    <li>&nbsp;</li>
 	    <li><em>Created by</em></li>
 	    <li><em>Austin Hartzheim</em></li>
+        <li><em>Riccardo Mutschlechner</em></li>
 	  </ul>
 	</div>
       </footer>
