Removed extra character

--- a/templates/default.tpl.html
+++ b/templates/default.tpl.html
@@ -11,7 +11,7 @@
       <header>
         <div id="nav">
       	  <span class="flleft">
-            <a href="/" title="{{ HACKATHON_NAME }} Live">Home</a> | 
+            <a href="/" title="{{ HACKATHON_NAME }} Live">Home</a>
           </span>
           <span class="flright logo">
 	    {{ HACKATHON_NAME }}
@@ -34,11 +34,11 @@
       
       <footer>
         <div class="column logo">{{ HACKATHON_NAME }} Live</div>
-        <div class="column">
+<~--        <div class="column">
           <ul>
             <li><a href="/">Home</a></li>
           </ul>
-        </div>
+        </div>-->
 	<div class="column">
 	  <ul>
 	    <li><em>Created by</em></li>
