Fix broken comment

--- a/templates/default.tpl.html
+++ b/templates/default.tpl.html
@@ -34,7 +34,7 @@
       
       <footer>
         <div class="column logo">{{ HACKATHON_NAME }} Live</div>
-<~--        <div class="column">
+<!--        <div class="column">
           <ul>
             <li><a href="/">Home</a></li>
           </ul>
