Fix template references to hackathon name; tmp fix.

--- a/templates/default.tpl.html
+++ b/templates/default.tpl.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{% block title %}Home{% endblock %} : {{ HACKATHON_NAME }} Live</title>
+    <title>{% block title %}Home{% endblock %} : MadHacks Live</title>
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/default.css" />
     {% block headincludes %}{% endblock %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +11,10 @@
       <header>
         <div id="nav">
       	  <span class="flleft">
-            <a href="/" title="{{ HACKATHON_NAME }} Live">Home</a>
+            <a href="/" title="MadHacks Live">Home</a>
           </span>
           <span class="flright logo">
-	    {{ HACKATHON_NAME }}
+	    MadHacks Live
           </span>
         </div>
       </header>
@@ -33,7 +33,7 @@
       <hr />
       
       <footer>
-        <div class="column logo">{{ HACKATHON_NAME }} Live</div>
+        <div class="column logo">MadHacks Live</div>
 <!--        <div class="column">
           <ul>
             <li><a href="/">Home</a></li>
