Fix live template headings.

--- a/templates/live/main.html
+++ b/templates/live/main.html
@@ -1,6 +1,6 @@
 {% extends "default.tpl.html" %}
-{% block title %}Live{% endblock %}
-{% block heading %}Live{% endblock %}
+{% block title %}Schedule{% endblock %}
+{% block heading %}Schedule{% endblock %}
 {% block content %}
 
 
