Added live event node.

--- a/templates/live/main.html
+++ b/templates/live/main.html
@@ -13,6 +13,10 @@
 </section>
 {% endif %}
 
+<section class="note">
+<p>If you are trying to get a private Github repo, please email <a href="mailto:team@madhacks.org">team@madhacks.org</a>.
+</section>
+
 {% csrf_token %}
 {% if mealevent.enabled %}
     <section class="note">
