--- a/templates/live/main.html
+++ b/templates/live/main.html
@@ -14,7 +14,7 @@
 {% endif %}
 
 <section class="note">
-<p>If you are trying to get a private Github repo, please email <a href="mailto:team@madhacks.org">team@madhacks.org</a>.
+<p>If you are trying to get a private GitHub repo, please email <a href="mailto:team@madhacks.org">team@madhacks.org</a>.
 </section>
 
 {% csrf_token %}
