Added explanation about groups already served.

--- a/templates/live/main.html
+++ b/templates/live/main.html
@@ -22,7 +22,7 @@
   <p><b>Now serving:</b> {{ mealevent.now_serving }}
   {% endif %}
   {% if mealevent.already_served %}
-  <p><b>Previously served: {{ mealevent.already_served }}</p>
+  <p><b>Previously served:</b> {{ mealevent.already_served }}. (If you missed your serving time, you can still eat now.)</p>
   {% endif %}
 </section>
 
